# ccdsl

./: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DOM_ANALYSIS.md  AST_IMPLEMENTATION_GUIDE.md  BUSINESS_PANEL_REVIEW.md  COBOL_BUSINESS_LOGIC_TRANSLATION.md  COBOL_TO_DSL_TRANSLATION.md  COBOL_TO_DSL_V3_FINAL.md  COBOL_TRANSLATION_WITH_ACTIONS.md  COMPILER_ARCHITECTURE.md  COMPILER_SETUP_COMPLETE.md  CONTEXT_VARIABLES_EXPLANATION.md  DSL_ACTION_LIBRARY_PROPOSAL.md  DSL_DECISION_TABLES.md  DSL_DOCUMENTATION_INDEX.md  DSL_EVOLUTION_V3_PIPELINE_SYNTAX.md  DSL_GRAMMAR.ebnf  DSL_GRAMMAR_V3.ebnf  DSL_LANGUAGE_SPECIFICATION.md  DSL_SAMPLES.md  DSL_V3.1_DECISION_TABLES_SUMMARY.md  DSL_V3.1_RELEASE_NOTES.md  DSL_V3_IMPLEMENTATION_ROADMAP.md  MODULE_SYSTEM.md  README.md  TOOLCHAIN_ARCHITECTURE.md  VALIDATION_SUMMARY.md  temp
core/: CORE_DSL_SPECIFICATION.md
domains/: CREDIT_CARD_DOMAIN.md
dsl-compiler/: Cargo.toml  README.md  build.rs
dsl-compiler/examples/: simple_entity.dsl  simple_parameter.dsl  simple_rule.dsl  simple_workflow.dsl
dsl-compiler/grammar/: CreditCardDSL.g4
dsl-compiler/grammar/.antlr/: CreditCardDSL.interp  CreditCardDSLLexer.interp  CreditCardDSLLexer.java  CreditCardDSLLexer.tokens
dsl-compiler/src/ast/: entity.rs  expressions.rs  mod.rs  parameter.rs  rule.rs  types.rs  workflow.rs
