[package]
name = "dsl-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Credit Card DSL Team"]
description = "Compiler for Credit Card Domain-Specific Language"
license = "MIT"

[[bin]]
name = "dslc"
path = "src/main.rs"

[dependencies]
# ANTLR4 runtime for Rust
antlr-rust = "0.3"

# Code generation with templates
handlebars = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and diagnostics
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
once_cell = "1.19"

[build-dependencies]
# For running ANTLR4 during build
# Note: Will need custom build script to invoke ANTLR4 jar

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
insta = "1.34"  # Snapshot testing for generated code

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
